Bugfix shifting post estimation

--- a/resources/scss/morphing.scss
+++ b/resources/scss/morphing.scss
@@ -27,6 +27,7 @@ body.mirror {
     
 
     footer {
+        z-index: 99999999;
         height: 17svh;
         font-size: 0.75em;
         display: flex;
